styling: fix alignment for email topbar checkbox

--- a/src/assets/css/cmps/email-list-topbar.css
+++ b/src/assets/css/cmps/email-list-topbar.css
@@ -1,5 +1,5 @@
 .email-list-topbar {
-    padding-inline-start: 19px;
+    padding-inline-start: 16px;
     height: 48px;
     display: flex;
     align-items: center;
